--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -11,13 +11,15 @@
     <div id="todo-table">
         <form>
             <input type="text" name="item" placeholder="Add new item..." required />
-            <button type="submit">Add Item</button>
+            <button type="submit">Add Todo</button>
         </form>
 
         <ul>
 
             <% for (let i=0; i<todos.length; i++){ %>
-                <li><%=todos[i].item %></li>
+                <li>
+                    <%=todos[i].item %>
+                </li>
                 <%}%>
         </ul>
     </div>
